# name: TestFind.test[uvloop-None]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        'created_at': '2015-10-06T20:00:00Z',
        'id': 2,
        'name': 'test.fq.gz',
        'name_on_disk': '2-Test.fq.gz',
        'ready': True,
        'removed': False,
        'removed_at': None,
        'reserved': False,
        'size': 9081,
        'type': 'reference',
        'uploaded_at': '2015-10-06T20:00:00Z',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
      },
    ],
  }
---
# name: TestFind.test[uvloop-reads]
  <class 'dict'> {
    'documents': <class 'list'> [
    ],
  }
---
# name: TestFind.test[uvloop-reference]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        'created_at': '2015-10-06T20:00:00Z',
        'id': 2,
        'name': 'test.fq.gz',
        'name_on_disk': '2-Test.fq.gz',
        'ready': True,
        'removed': False,
        'removed_at': None,
        'reserved': False,
        'size': 9081,
        'type': 'reference',
        'uploaded_at': '2015-10-06T20:00:00Z',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
      },
    ],
  }
---
# name: TestFind.test_pagination[uvloop-1-2]
  <class 'dict'> {
    'found_count': 1,
    'items': <class 'list'> [
    ],
    'page': 2,
    'page_count': 1,
    'per_page': 1,
    'total_count': 1,
  }
---
# name: TestFind.test_pagination[uvloop-1-None]
  <class 'dict'> {
    'found_count': 1,
    'items': <class 'list'> [
      <class 'dict'> {
        'created_at': '2015-10-06T20:00:00Z',
        'id': 2,
        'name': 'test.fq.gz',
        'name_on_disk': '2-Test.fq.gz',
        'ready': True,
        'removed': False,
        'removed_at': None,
        'reserved': False,
        'size': 9081,
        'type': 'reference',
        'uploaded_at': '2015-10-06T20:00:00Z',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
      },
    ],
    'page': 1,
    'page_count': 1,
    'per_page': 1,
    'total_count': 1,
  }
---
# name: TestFind.test_pagination[uvloop-2-None]
  <class 'dict'> {
    'found_count': 1,
    'items': <class 'list'> [
      <class 'dict'> {
        'created_at': '2015-10-06T20:00:00Z',
        'id': 2,
        'name': 'test.fq.gz',
        'name_on_disk': '2-Test.fq.gz',
        'ready': True,
        'removed': False,
        'removed_at': None,
        'reserved': False,
        'size': 9081,
        'type': 'reference',
        'uploaded_at': '2015-10-06T20:00:00Z',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
      },
    ],
    'page': 1,
    'page_count': 1,
    'per_page': 2,
    'total_count': 1,
  }
---
# name: TestFind.test_pagination[uvloop-3-1]
  <class 'dict'> {
    'found_count': 1,
    'items': <class 'list'> [
      <class 'dict'> {
        'created_at': '2015-10-06T20:00:00Z',
        'id': 2,
        'name': 'test.fq.gz',
        'name_on_disk': '2-Test.fq.gz',
        'ready': True,
        'removed': False,
        'removed_at': None,
        'reserved': False,
        'size': 9081,
        'type': 'reference',
        'uploaded_at': '2015-10-06T20:00:00Z',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
      },
    ],
    'page': 1,
    'page_count': 1,
    'per_page': 3,
    'total_count': 1,
  }
---
# name: TestFind.test_pagination[uvloop-None-2]
  <class 'dict'> {
    'found_count': 1,
    'items': <class 'list'> [
    ],
    'page': 2,
    'page_count': 1,
    'per_page': 25,
    'total_count': 1,
  }
---
# name: TestFind.test_pagination[uvloop-None-None]
  <class 'dict'> {
    'found_count': 1,
    'items': <class 'list'> [
      <class 'dict'> {
        'created_at': '2015-10-06T20:00:00Z',
        'id': 2,
        'name': 'test.fq.gz',
        'name_on_disk': '2-Test.fq.gz',
        'ready': True,
        'removed': False,
        'removed_at': None,
        'reserved': False,
        'size': 9081,
        'type': 'reference',
        'uploaded_at': '2015-10-06T20:00:00Z',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
      },
    ],
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 1,
  }
---
# name: TestFind.test_uploads_order[uvloop]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        'created_at': '2015-10-06T20:00:00Z',
        'id': 1,
        'name': 'test.fq.gz',
        'name_on_disk': '1-Test.fq.gz',
        'ready': True,
        'removed': False,
        'removed_at': None,
        'reserved': False,
        'size': 9081,
        'type': 'hmm',
        'uploaded_at': '2015-10-06T20:00:00Z',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
      },
      <class 'dict'> {
        'created_at': '2014-07-27T00:00:00Z',
        'id': 2,
        'name': 'test.fq.gz',
        'name_on_disk': '2-Test.fq.gz',
        'ready': True,
        'removed': False,
        'removed_at': None,
        'reserved': False,
        'size': 9081,
        'type': 'hmm',
        'uploaded_at': '2014-07-27T00:00:00Z',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
      },
      <class 'dict'> {
        'created_at': '2013-09-15T00:00:00Z',
        'id': 3,
        'name': 'test.fq.gz',
        'name_on_disk': '3-Test.fq.gz',
        'ready': True,
        'removed': False,
        'removed_at': None,
        'reserved': False,
        'size': 9081,
        'type': 'hmm',
        'uploaded_at': '2013-09-15T00:00:00Z',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
      },
    ],
  }
---
# name: TestUpload.test[uvloop-hmm]
  <class 'dict'> {
    'created_at': '2015-10-06T20:00:00Z',
    'id': 1,
    'name': 'Test.fq.gz',
    'name_on_disk': '1-Test.fq.gz',
    'ready': True,
    'removed': False,
    'removed_at': None,
    'reserved': False,
    'size': 9081,
    'type': 'hmm',
    'uploaded_at': '2015-10-06T20:00:00Z',
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'bob',
      'id': 'test',
    },
  }
---
# name: TestUpload.test[uvloop-reads]
  <class 'dict'> {
    'created_at': '2015-10-06T20:00:00Z',
    'id': 1,
    'name': 'Test.fq.gz',
    'name_on_disk': '1-Test.fq.gz',
    'ready': True,
    'removed': False,
    'removed_at': None,
    'reserved': False,
    'size': 9081,
    'type': 'reads',
    'uploaded_at': '2015-10-06T20:00:00Z',
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'bob',
      'id': 'test',
    },
  }
---
# name: TestUpload.test[uvloop-reference]
  <class 'dict'> {
    'created_at': '2015-10-06T20:00:00Z',
    'id': 1,
    'name': 'Test.fq.gz',
    'name_on_disk': '1-Test.fq.gz',
    'ready': True,
    'removed': False,
    'removed_at': None,
    'reserved': False,
    'size': 9081,
    'type': 'reference',
    'uploaded_at': '2015-10-06T20:00:00Z',
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'bob',
      'id': 'test',
    },
  }
---
# name: TestUpload.test[uvloop-subtraction]
  <class 'dict'> {
    'created_at': '2015-10-06T20:00:00Z',
    'id': 1,
    'name': 'Test.fq.gz',
    'name_on_disk': '1-Test.fq.gz',
    'ready': True,
    'removed': False,
    'removed_at': None,
    'reserved': False,
    'size': 9081,
    'type': 'subtraction',
    'uploaded_at': '2015-10-06T20:00:00Z',
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'bob',
      'id': 'test',
    },
  }
---
